Update Code to accommodate change for Hibernate 6.6.15.Final